--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
+  "parserOptions": {
+    "ecmaVersion": 8
+  },
   "env": {
     "es6": true,
+    "jasmine": true,
     "node": true
   },
   "rules": {
@@ -117,7 +121,7 @@
     "func-names": 0,
     "func-style": 0,
     "id-length": 0,
-    "indent": [2,2],
+    "indent": [2,2, { "SwitchCase": 1 }],
     "key-spacing": 2,
     "lines-around-comment": 0,
     "linebreak-style": 0,
@@ -150,7 +154,7 @@
     "semi": [2,"always"],
     "sort-vars": 0,
     "space-before-blocks": [2,"always"],
-    "space-before-function-paren": [2,"never"],
+    "space-before-function-paren": [2,{ "anonymous": "never", "named": "never", "asyncArrow": "always" }],
     "space-in-parens": [2,"never"],
     "space-infix-ops": 0,
     "space-unary-ops": 2,
@@ -174,6 +178,11 @@
     "max-params": 0,
     "max-statements": 0,
     "no-bitwise": 0,
-    "no-plusplus": 0
+    "no-plusplus": 0,
+    "no-restricted-globals": [
+      "error",
+      "fdescribe",
+      "fit"
+    ]
   }
 }
